--- a/calc.html
+++ b/calc.html
@@ -11,6 +11,7 @@
     <div id="calc-container"> 
     <div id="calculator">
         <div id="display">0</div>
+        <button id="plus-minus">+/-</button>
         <button id="seven">7</button>
         <button id="eight">8</button>
         <button id="nine">9</button>
@@ -25,9 +26,10 @@
         <button id="subtract">-</button>
         <button id="zero">0</button>
         <button id="equals">=</button>
-        <button id="clear">c</button>
+        <button id="clear">Ac</button>
         <button id="add">+</button>
         <button id="decimal">.</button>
+        
       </div>
     </div>
       <script src="calc.js"></script>
