--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                     <div class="main-title">
                         <h2>About <span>me</span></h2>
             <p>
-            I am self-taught, entry-level frontend developer with a passion for creating beautiful and functional websites. and I've spent the past year honing my skills and building my portfolio.
+            I am a self-taught, entry-level frontend developer with a passion for creating beautiful and functional websites. and I've spent the past year honing my skills and building my portfolio.
             </p>
                     </div>
                     <div class="btn-con">
@@ -150,14 +150,47 @@
          <!--------------projects-page---------------->
         <section class="section project-section projects" id="projects">
             <div class="project-wrapper">
+                <div class="left-project">
             <div class="main-title">
                 <h2>My projects</h2>
-            </div>
             <p class="project-text">Here are some of my completed projects</p>
-            <div class="project">
-                <div class="project-item">
+                </div>
+                <div class="btn-con">
+                    <a href="#" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fa fa-download"></i></span>
+                    </a>
+                </div>
+            <div class="right-project">
+                <div class="project-con">
                     <div class="img">
-                        <img src="project-images/calculator.jpg" alt="">
+
+                        <img src="project-images/portfolio-img.png" alt="portfolio-img">
+                    </div>
+                </div>
+                <div class="project-con">
+                    <div class="img">
+                        <img src="project-images/calc-img.png" alt="">
+                    </div>
+                </div>
+                <div class="project-con">
+                    <div class="img">
+                        <img src="project-images/calc-img.png" alt="">
+                    </div>
+                </div>
+                <div class="project-con">
+                    <div class="img">
+                        <img src="project-images/calc-img.png" alt="">
+                    </div>
+                </div>
+                <div class="project-con">
+                    <div class="img">
+                        <img src="project-images/calc-img.png" alt="">
+                    </div>
+                </div>
+                <div class="project-con">
+                    <div class="img">
+                        <img src="project-images/calc-img.png" alt="">
                     </div>
                 </div>
             </div>
