project sectio update

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <title>portfolio website</title>
 </head>
 <body class="main-cont"> 
-     <!--------------home-page---------------->
+     <!--------------home-section---------------->
     <header class="section home-section header active" id="home">
         <div class="header-wrapper">
             <div class="left-header">
@@ -42,7 +42,7 @@
     
     <main>
         
-        <!--------------about-page---------------->
+        <!--------------about-section---------------->
         <section class="section about-section about" id="about">
             <div class="about-wrapper">
                 <div class="left-about">
@@ -161,17 +161,18 @@
                 </div>
             </div>
         </section>
-         <!--------------projects-page---------------->
+         <!--------------projects-section---------------->
         <section class="section project-section projects" id="projects">
             <div class="project-wrapper">
                 <div class="left-project">
                 <h1>My<span>projects</span></h1>
-            <p class="project-text">Here are some of my completed projects</p>
+            <p>Here are some of my completed projects</p>
                 <div class="btn-con">
                     <a href="#" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fa fa-download"></i></span>
                     </a>
+                </div>
                 </div>
             <div class="right-project">
                 <div> 
@@ -179,41 +180,47 @@
 <a href="https://wemdavis.github.io/real_portfolio/portfolio.html">
                         <img src="project-images/portfolio-img.png" alt="portfolio-image" /></a>
                 </div>
-                <h2>Portfolio Project</h2>
+                <h2>Portfolio <span>Project</span></h2>
                 </div>
                 <div>
                 <div class="project-con">
                         <a href=""> 
                         <img src="project-images/calc-img.png" alt="calculator-image"></a>
                 </div>
-                <h2>Calculator Project</h2>
+                <h2>Calculator <span>Project</span></h2>
                 </div>
                 <div> 
                 <div class="project-con">
                         <a href=""> 
                         <img src="project-images/calc-img.png" alt=""></a>
                 </div>
-                <h2>Documentation Project</h2>
+                <h2>Documentation <span>Project</span></h2>
                 </div>
                 <div> 
                 <div class="project-con">
                         <a href=""> 
                         <img src="project-images/calc-img.png" alt=""></a>
                 </div>
-                <h2>Portfolio Project</h2>
+                <h2>Portfolio <span>Project</span></h2>
                 </div>
+                <div>
                 <div class="project-con">
                         <a href=""> 
                         <img src="project-images/calc-img.png" alt=""></a>
                 </div>
+                <h2>Portfolio <span>Project</span></h2>
+                </div>
+                <div> 
                 <div class="project-con">
                         <a href=""> 
                         <img src="project-images/calc-img.png" alt=""></a>
+                </div>
+                <h2>Portfolio <span>Project</span></h2>
                 </div>
             </div>
             </div>
         </section>
-        <!--------------contact-page---------------->
+        <!--------------contact-section---------------->
         <section class="section contact-section contacts" id="contacts">
             <div class="contact-wrapper">
                 <div class="left-contact">
@@ -250,6 +257,7 @@
                     </div>
                                 </form>
                               </div>
+                              <footer>Thank you for visiting my portfolio, and please feel free to reach out if you have any questions or opportunities to collaborate!</footer>
             </div>
         </section>
         </main>
