--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,8 @@
     <header class="section home-section header active" id="home">
         <div class="header-wrapper">
             <div class="left-header">
-                <h1 class="name">Hi, 
-                    <span>I'm Bukola</span></h1>
-                    <br>
-                    <h2>A Frontend Web Developer</h2>
-                    <br>
-                <p>With entry-level experience in web design and development knowledge, producing quality work</p>
-                <br />
+                <h1 class="name">Hi, I'm <span>Fasunon Bukola</span>. A Frontend Web Developer</h1>
+                <p>I am a frontend web developer with experience in web design and development knowledge, producing quality work</p>
                 <div class="btn-con">
                 <a href="" class="main-btn">
                     <span class="btn-text">Download CV</span>
@@ -45,17 +40,17 @@
         <!--------------about-section---------------->
         <section class="section about-section about" id="about">
             <div class="about-wrapper">
-                <div class="left-about">
-                        <h1>About <span>me</span></h1>
-            <p>I am a self-taught, entry-level frontend developer with a passion for creating beautiful and functional websites. and I've spent the past year honing my skills and building my portfolio.</p>
+                        <h1>About <span>Me</span></h1>
+                        <div class="left-about">
+            <p>I am a self-taught, frontend developer with a passion for creating beautiful and functional websites. and I've spent the past year honing my skills and building my portfolio.</p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
-                            <span class="btn-text">Download CV</span>
+                            <span class="btn-text">Read More</span>
                             <span class="btn-icon"><i class="fa fa-download"></i></span>
                         </a>
                     </div>
-                </div>
-                <div class="right-about">
+                    </div>
+                    <div class="right-about">
                     <div class="about-con">
                         <div class="abt-text">
                             <p class="large-text">+10</p>
@@ -83,7 +78,7 @@
                 </div>
             </div>
             <div class="about-stats">
-                <h4 class="stats-title">My <span>Skills</span></h4>
+                <h2 class="stats-title">My <span>Skills</span></h2>
                 <div class="progress-bars">
                     <div class="progress-bar">
                         <p class="progress-title">html5</p>
@@ -164,56 +159,50 @@
          <!--------------projects-section---------------->
         <section class="section project-section projects" id="projects">
             <div class="project-wrapper">
-                <div class="left-project">
-                <h1>My<span>projects</span></h1>
+                <div class="main-title">
+                <h1>My <span>projects</span></h1>
             <p>Here are some of my completed projects</p>
-                <div class="btn-con">
-                    <a href="#" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon"><i class="fa fa-download"></i></span>
-                    </a>
                 </div>
-                </div>
-            <div class="right-project">
-                <div> 
+                <div class="project-container">
+                    <div class="project-con1">
                 <div class="project-con">
                     <a href="https://wemdavis.github.io/real_portfolio/portfolio.html">
-                        <img src="project-images/portfolio-img.png" alt="portfolio-image" /></a>
+                        <img src="" alt="portfolio-image" /></a>
                 </div>
                 <h2>Portfolio <span>Project</span></h2>
-                </div>
-                <div>
+            </div>
+                <div class="project-con2">
                 <div class="project-con">
                         <a href="https://wemdavis.github.io/calculator_project/calc.html"> 
-                        <img src="project-images/calc-img.png" alt="calculator-image"></a>
+                        <img src="" alt="calculator-image"></a>
                 </div>
                 <h2>Calculator <span>Project</span></h2>
                 </div>
-                <div> 
+                <div class="project-con3"> 
                 <div class="project-con">
                         <a href=""> 
-                        <img src="project-images/calc-img.png" alt=""></a>
+                        <img src="" alt=""></a>
                 </div>
                 <h2>Documentation <span>Project</span></h2>
                 </div>
-                <div> 
+                <div class="project-con4"> 
                 <div class="project-con">
                         <a href=""> 
-                        <img src="project-images/calc-img.png" alt=""></a>
+                        <img src="" alt=""></a>
                 </div>
                 <h2>Portfolio <span>Project</span></h2>
                 </div>
-                <div>
+                <div class="project-con5">
                 <div class="project-con">
                         <a href=""> 
-                        <img src="project-images/calc-img.png" alt=""></a>
+                        <img src="" alt=""></a>
                 </div>
                 <h2>Portfolio <span>Project</span></h2>
                 </div>
-                <div> 
+                <div class="project-con6"> 
                 <div class="project-con">
                         <a href=""> 
-                        <img src="project-images/calc-img.png" alt=""></a>
+                        <img src="" alt=""></a>
                 </div>
                 <h2>Portfolio <span>Project</span></h2>
                 </div>
