--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <div class="header-wrapper">
             <div class="left-header">
                 <h1 class="name">Hi, I'm <span>Fasunon Bukola</span>. A Frontend Web Developer</h1>
-                <p>I am a frontend web developer with experience in web design and development knowledge, producing quality work</p>
+                <p>I am a frontend web developer with experience in web design and development knowledge, producing quality work.</p>
                 <div class="btn-con">
                 <a href="" class="main-btn">
                     <span class="btn-text">Download CV</span>
@@ -40,9 +40,9 @@
         <!--------------about-section---------------->
         <section class="section about-section about" id="about">
             <div class="about-wrapper">
-                        <h1>About <span>Me</span></h1>
                         <div class="left-about">
-            <p>I am a self-taught, frontend developer with a passion for creating beautiful and functional websites. and I've spent the past year honing my skills and building my portfolio.</p>
+                            <h1>About <span>Me</span></h1>
+            <p>I am a self-taught, frontend developer with a passion for creating beautiful, functional and responsive websites. And I've spent the past year honing my skills and building my portfolio.</p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
                             <span class="btn-text">Read More</span>
@@ -161,34 +161,34 @@
             <div class="project-wrapper">
                 <div class="main-title">
                 <h1>My <span>projects</span></h1>
-            <p>Here are some of my completed projects</p>
+            <p>Here are some of my completed projects:</p>
                 </div>
                 <div class="project-container">
                     <div class="project-con1">
                 <div class="project-con">
                     <a href="https://wemdavis.github.io/real_portfolio/portfolio.html">
-                        <img src="" alt="portfolio-image" /></a>
+                        <img src="project-images/laptop5.avif" alt="" /></a>
                 </div>
                 <h2>Portfolio <span>Project</span></h2>
             </div>
                 <div class="project-con2">
                 <div class="project-con">
                         <a href="https://wemdavis.github.io/calculator_project/calc.html"> 
-                        <img src="" alt="calculator-image"></a>
+                        <img src="project-images/laptop img2.avif" alt=""></a>
                 </div>
                 <h2>Calculator <span>Project</span></h2>
                 </div>
                 <div class="project-con3"> 
                 <div class="project-con">
                         <a href=""> 
-                        <img src="" alt=""></a>
+                        <img src="project-images/laptop3.avif" alt=""></a>
                 </div>
                 <h2>Documentation <span>Project</span></h2>
                 </div>
                 <div class="project-con4"> 
                 <div class="project-con">
                         <a href=""> 
-                        <img src="" alt=""></a>
+                        <img src="project-images/Laptop 6.png" alt=""></a>
                 </div>
                 <h2>Portfolio <span>Project</span></h2>
                 </div>
