this week changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="section home-section header active" id="home">
         <div class="header-wrapper">
             <div class="left-header">
-                <h1>Hi, I'm <span>Fasunon Bukola</span> <br>A Frontend Web Developer</h1>
+                <h1>Hi, I'm <span>Fasunon Bukola</span> <br>A Web developer</h1>
                 <p>I am an experienced developer with key specialty in web design and development knowledge, producing quality work.</p>
                 <div class="btn-con">
                 <a href="" class="main-btn">
