adjusting the gaps in the first two sections

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
     <header class="section home-section header active" id="home">
         <div class="header-wrapper">
             <div class="left-header">
-                <h1>Hi, I'm <span>Fasunon Bukola</span> <br>A Web developer</h1>
-                <p>I am an experienced developer with key specialty in web design and development knowledge, producing quality work.</p>
+                <h1>Hi, I'm <span>Fasunon Bukola</span> <br>A Frontend Web Developer</h1>
+                <p>I am an experienced developer with key specialty in web design and  a passion for creating beautiful and functional web experiences.</p>
                 <div class="btn-con">
                 <a href="" class="main-btn">
                     <span class="btn-text">Download CV</span>
@@ -39,7 +39,7 @@
     <div class="about-wrapper">
                 <div class="left-about">
                     <h1>About <span>Me</span></h1>
-    <p>I am a self-taught, frontend developer with a passion for creating beautiful, functional and responsive websites. And I've spent the past year honing my skills and building my portfolio.</p>
+    <p>I am a self-taught, frontend developer and I recently completed a certification course where I learned the fundamentals of HTML, CSS, JavaScript, React... and I've also spent the past year honing my skills and building my portfolio.</p>
             <div class="btn-con">
                 <a href="#" class="main-btn">
                     <span class="btn-text">Read More</span>
