updating media query

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                 <h1>Hi, I'm <span>Fasunon Bukola</span> <br>A Frontend Web Developer</h1>
                 <p>I am an experienced developer with key specialty in web design and  a passion for creating beautiful and functional web experiences.</p>
                 <div class="btn-con">
-                <a href="" class="main-btn">
+                <a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:78684d2a-3968-337c-8e5b-a8ae7a66960c" class="main-btn" download>
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"><i class="fa fa-download"></i></span>
                 </a></div>
