more changes to media query

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
                 </a></div>
             </div>
             <div class="right-header">
-<div class="h-shape"></div>
-<div class="img">
-    <img src="project-images/buki11.png" alt="">
-</div>
-</div>     
+                <div class="h-shape"></div>
+                <div class="img">
+                    <img src="project-images/buki11.png" alt="">
+                </div>
+            </div>     
         </div>
     </header>
     <main>
@@ -182,7 +182,7 @@
                 <div class="project-con">
                         <a href=""> 
                         <img src="project-images/Laptop 6.png" alt=""></a>
-                        <p>Portfolio <span>Project</span></p>
+                        <p>Random <span>Quotes</span></p>
                     </div>
                 <div class="project-con">
                         <a href=""> 
