updated media query for contact session

--- a/portfolio.html
+++ b/portfolio.html
@@ -233,6 +233,7 @@
                                 </div>
                                 </form>
                             </div>
+            </div>
         </section>
         </main>
 
