--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <div class="header-wrapper">
             <div class="left-header">
                 <h1>Hi, I'm <span>Fasunon Bukola</span> <br />A Frontend Web Developer</h1>
-                <p>I am an experienced developer with key specialty in web design and  a passion for creating beautiful and functional web experiences.</p>
+           <p>I am an experienced developer with key specialty in web design and  a passion for creating beautiful and functional web experiences.</p>
                 <div class="btn-con">
                 <a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:78684d2a-3968-337c-8e5b-a8ae7a66960c" class="main-btn" download>
                     <span class="btn-text">Download CV</span>
@@ -184,7 +184,7 @@
                         <p>Documentation <span>Project</span></p>
                     </div>
                 <div class="project-con">
-                        <a href=""> 
+                        <a href="https://wemdavis.github.io/RandomQuote-Machine/"> 
                         <img src="project-images/Laptop 6.png" alt=""></a>
                         <p>Random <span>Quotes</span></p>
                     </div>
@@ -239,8 +239,8 @@
 
 
         <!--------------Icons----------------->
-    <div class="controls">
-
+    
+        <div class="controls">
 
         <div class="cont control-2 active-btn" data-id="home">
             <i class="fa fa-home"></i>
