--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="project-con">
                         <a href="https://wemdavis.github.io/markdown-react-app/"> 
-                        <img src="./project-images/markdown.jpeg" alt=""></a>
+                        <img src="project-images/laptop3.avif" alt=""></a>
                         <p>markdown-react-app <span>Project</span></p>
                 </div>
                 <div class="project-con">
@@ -193,7 +193,7 @@
                 
                 <div class="project-con">
                         <a href=""> 
-                        <img src="" alt=""></a>
+                        <img src="project-images/laptop3.avif" alt=""></a>
                         <p>News Homepage <span>Project</span></p>
                 </div>
                 <div class="project-con">
